# eurobot-base

./: .config  .gitignore  .gitmodules  Kconfig  Makefile  README  cocobot.ttm  cocobot_config.h  cocoui.js  cocoui.py  main.c  meca_crimp.c  meca_crimp.h  meca_fish.c  meca_fish.h  meca_seashell.c  meca_seashell.h  meca_sucker.c  meca_sucker.h  meca_umbrella.c  meca_umbrella.h  package.json  platforms.mk  prepare.sh  repo.sh  serial_protocol.js  set_github.sh  set_gogs.sh  strat_dune_attack.c  strat_easy_dune.c  strat_easy_dune.h  strat_fish.c  strat_hut.c  strat_hut.h  strat_little_dune.c  strat_little_dune.h  strat_sand.c  strat_sand.h  strat_shell.c
ausbee-packages/: Kconfig  packages.mk
ausbee-packages/libcanard/: package.mk
ausbee-packages/libcocobot/: Kconfig  generate_canard_list.sh  package.mk
ausbee-packages/mcual/: .gitignore  Kconfig  package.mk
ausbee-packages/spirit1/: package.mk
ausbee-packages/vl53l0x/: Kconfig  (+1 more)
ausbee-platforms/: Kconfig  option.Kconfig  platforms.mk
brain_2015/: platform.c  platform.h
brain_2016/: pcm9685.c  platform.c  platform.h  platform.mk
cocoui/: asserv.py  freeRTOS.py  protocol.py  ui.py
discovery_f4/: platform.c  platform.h  platform.mk
include/: mcual.h
nucleo_401/: platform.c  platform.mk
pbrain/: .config
prism_v1/: platform.c  platform.h  platform.mk
projects/cocoui/state_manager/: Cargo.toml
projects/cocoui/state_manager/src/: lib.rs
projects/cocoui/state_manager/src/com/: mod.rs  msg.rs  serial.rs
projects/cocoui/state_manager/src/simu/: brain.rs  mod.rs  physics.rs
projects/cocoui/state_manager/src/state/: mod.rs  stype.rs
projects/cocoui/ui/: Cargo.toml  config.toml
projects/cocoui/ui/config/: com.toml  field.toml  robots.toml  shortcut.toml
projects/cocoui/ui/src/: com.rs  dsdl.rs  main.rs  network.rs  protocol.rs  robot.rs  serial.rs  ui.rs
projects/cocoui/ui/src/ui/: boards.rs  meca.rs  mod.rs  motors.rs
projects/cocoui/ui/src/ui/glade/: #ui.glade#  meca.glade  meca.glade~  ui.glade  ui.glade~
protocol/: TCPProtocol.js  protocol.js  serialProtocol.js
public/: index.html
sbrain/: .config  Makefile  main.c
scripts/: mcual_loader.py
src/: clock_arm.c  gpio_arm.c  usart_arm.c
views/: index.html
(+603 files in other folders)
