[package]
name = "cocoui"
version = "0.1.0"
authors = ["Damien Espitallier <damien.espitallier@gmail.com>"]

[dependencies]
colored = "1.6.1"
glib = "0.6.0"
cairo-rs = "0.5.0"
config = "0.9.1"
lazy_static = "1.1.0"
state_manager = { path = "../state_manager" }

[dependencies.gtk]
version = "0.5.0"
features = ["v3_20"]
