[package]
name = "cocoui"
version = "0.1.0"
authors = ["Damien Espitallier <damien.espitallier@gmail.com>"]

[dependencies]
colored = "1.6.1"
glib = "0.7.0"
cairo-rs = "0.6.0"
config = "0.9.1"
lazy_static = "1.1.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
state_manager = { path = "../state_manager" }
config_manager = { path = "../config_manager" }
gdk = "0.10.0"
gdk-pixbuf = "0.6.0"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_20"]
